--- a/.env
+++ b/.env
@@ -1,8 +1,1 @@
-REACT_APP_FIREBASE_PUBLIC_API_KEY=AIzaSyCom8rAeTfuVhk3p8JpvfbFvPGNRdK7sLQ
-REACT_APP_FIREBASE_AUTH_DOMAIN=vershio-hawt.firebaseapp.com
-REACT_APP_FIREBASE_PROJECT_ID=vershio-hawt
-REACT_APP_FIREBASE_STORAGE_BUCKET=vershio-hawt.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1065798016609
-REACT_APP_FIREBASE_APP_ID=1:1065798016609:web:20c70d892c1b8864a4d420
-
-
+GPT_KEY = "sk-01NqGXf1DZWOCWwcnzZXanZ7IVnmuKm0IsNEsiDX"
