--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.6.0",
     "framer-motion": "^4",
